# narrative_scanner

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
templates/: form.html
