[tool.poetry]
name = "narr-scan"
version = "0.1.0"
description = ""
authors = ["I.A. <iazerkovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.16.2"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
requests = "^2.31.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
