[tool.poetry]
name = "narr-scan"
version = "0.1.0"
description = ""
authors = ["I.A. <iazerkovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.16.2"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
requests = "^2.31.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langchain-google-vertexai = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
black = "^24.4.0"


[tool.isort.config]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
